upload site mobirise

--- a/style.css
+++ b/style.css
@@ -4,3 +4,7 @@ body {
 .nav-class {
     box-shadow: rgba(100, 100, 111, 0.352) 0px 7px 29px 0px;
 }
+
+.banner {
+    background-image:  url(https://images.pexels.com/photos/13012361/pexels-photo-13012361.jpeg;
+}
